Update MNIST COM KNN SKLEARN.ipynb

--- a/MNIST COM KNN SKLEARN.ipynb
+++ b/MNIST COM KNN SKLEARN.ipynb
@@ -41,7 +41,7 @@
    ],
    "source": [
     "# Importando base completa mnist.\n",
-    "mnist = MNIST('C:\\\\Users\\\\Gustavo\\\\mnist_data')\n",
+    "mnist = MNIST('..\\\\mnist_data')\n",
     "mnist.gz = True\n",
     "# Selecionando 20 mil imagens e atribuindo-as às bases de treino e teste\n",
     "# mnist.load_training()[0] = dados das imagens \n",
